@@ -8204,3 +8204,7 @@ EPRINTS-3.1-beta-2
 
 2009-05-12 cjg
  * First draft of a REST interface.
+
+2009-05-12 tdb
+ * Reduced number of indexed fields in eprint and fixed indexing counts
+
